kubernetes-files/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  clusterIP: None  
  ports:
  - port: 5432
    name: postgres
  selector:
    app: postgres
